 v0.2 (not released)
 - issue #112 : update ic_launcher-web.png icon
 - issue #111 : add xxhdpi and xxxhdpi version of all images
 - optimize size of all PNG images
 - use SystemClock.elapsedRealtime() to get elapsed time in milliseconds in
 AriadneLocation.isRecent()

 v0.1.1 (released 04Dec2013)
 
 - updated license info about third party material
 - updated ic_action_refresh.png icon
 - added feature list to README.md

 v0.1 (released 03Dec2013)
features :
 - determine location based on GPS signal, WiFi or cell phone network :
     - use best/most accurate location provider
     - get location updates automatically (based on a time interval or change of location) or
     - get location on demand (by manually refreshing)
 - save a location
 - ‘get back’ mode : indicator pointing to a stored location (showing distance and direction)
 - indicate current speed and current bearing